[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-network-models"
version = "0.1.0"
description = "Reinforcement learning agents and VAE-inspired generative models (DLGM/tDLGM/VRNN variants)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Anton Johansson" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
    "gymnasium>=0.29",
]

[project.urls]
Repository = "https://github.com/AntonJoha/neural_network_models"

[tool.setuptools.packages.find]
exclude = ["tests*"]
